--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,12 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 log = "0.4"
 simplelog = "0.5"
-ring = "0.14"
+ring = "0.16"
 dirs = "2"
 toml = "0.5"
 regex = "1"
 heck = "0.3"
+urlencoding = "1"
+rand = "0.7"
+base64 = "0.10"
+url = "1"
