--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "photo-uploader"
+name = "phupload"
 version = "0.1.0"
 authors = ["Mike Engel <mike@mike-engel.com>"]
 edition = "2018"
